<resources>
    <string name="app_name">Lugares</string>
    <string name="viewUsers">Usuarios</string>
    <string name="viewMap">Mapa</string>
    <string name="viewListUsers">Lista de Usuarios</string>
    <string name="Users">Usuarios Registrados</string>
    <string name="searchUser">Buscar por Apellido...</string>
    <string name="searchRoute">Buscar por Lugar...</string>

    <string name="idUser">Código</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="numRoutes"># Routes User</string>
    <string name="avatarUser">Avatar</string>

    <string name="viewRoutes">Ver Rutas</string>
    <string name="destroy">Eliminar</string>

    <string name="addUser">Registrar Usuario</string>
    <string name="addRoute">Registrar Ruta</string>
    <string name="frmUser">Formulario de Usuarios</string>

    <string name="change">Cambiar</string>
    <string name="remove">Quitar</string>
    <string name="title_activity_maps">Map</string>
    <string name="listRoutes">Lista de Rutas</string>

    <string name="cityOrPlace">Ciudad o Lugar</string>

    <string name="lat">Latitud: </string>
    <string name="lng">Longitud: </string>

    <string name="viewInMap">Ver en Mápa</string>
    <string name="title_activity_view_in_map">Map</string>


</resources>
