<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="59dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/md_white_1000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frmUser"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scroll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtIdUserEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputId"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/idUser"
                        android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputName"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLastName"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastName"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/avatarUser"
                    android:textColor="@color/md_grey_500"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/avatarViewFrm"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/img_background"
                    android:padding="2dp"
                    android:src="@drawable/ic_default" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnChoseImgDeal"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/btn_blue"
                        android:onClick="choseImg"
                        android:text="@string/change"
                        android:textColor="@color/md_white_1000"
                        android:textSize="10sp" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/md_grey_100" />

                    <Button
                        android:id="@+id/btnImgDef"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/btn_pink"
                        android:onClick="imgDefault"
                        android:text="@string/remove"
                        android:textColor="@color/md_white_1000"
                        android:textSize="10sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/md_grey_100" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>