<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp">
                        <TextView
                            android:id="@+id/txtIdUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/idUser"
                            android:textSize="13sp" />
                        <ImageView
                            android:id="@+id/avatarView"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/img_background"
                            android:padding="2dp"
                            android:src="@drawable/ic_logo_default" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txtNameUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtLastNameUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lastName"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_margin="5dp"
                            android:background="@color/md_grey_50" />

                        <TextView
                            android:id="@+id/txtNumRoutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/numRoutes"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/md_grey_50" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <Button
                        android:id="@+id/btnViewRoutes"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/viewRoutes" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="30dp"
                        android:background="@color/md_grey_100" />

                    <Button
                        android:id="@+id/btnDestroyUser"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/destroy" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

</LinearLayout>