<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".UserRoutes">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUserRoutes"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/md_white_1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatarUserRoutes"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/img_background"
                android:padding="2dp"
                android:src="@drawable/ic_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtNameUserRoutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtLastNameUserRoutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtIdUserRoutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idUser"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_100" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputNameCity"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditNameCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cityOrPlace"
                    android:inputType="textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txtLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_100" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listRoutes"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRoutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


    <com.miguelcatalan.materialsearchview.MaterialSearchView
        android:id="@+id/searchViewRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchRoute"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_grey_300"
        app:searchBackIcon="@drawable/ic_action_navigation_arrow_back_inverted"
        app:searchBackground="?colorPrimary"
        app:searchCloseIcon="@drawable/ic_action_navigation_close_inverted"
        app:searchSuggestionIcon="@drawable/ic_suggestion" />

</RelativeLayout>