<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users"
    android:background="@color/md_white_1000">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUsers"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/md_white_1000"
        app:title="@string/viewListUsers"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Users"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:background="@color/md_grey_100" />
        </LinearLayout>

    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/ic_add_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.miguelcatalan.materialsearchview.MaterialSearchView
        android:id="@+id/searchViewDeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchUser"
        android:textColor="@color/md_white_1000"
        android:textColorHint="@color/md_grey_300"
        app:searchBackIcon="@drawable/ic_action_navigation_arrow_back_inverted"
        app:searchBackground="?colorPrimary"
        app:searchCloseIcon="@drawable/ic_action_navigation_close_inverted"
        app:searchSuggestionIcon="@drawable/ic_suggestion" />

</RelativeLayout>